First real commit: index.html - added meta tag in header for mobile development, added jQuery and custom js file in js folder, referenced those before </body> for faster load time. script.js - made ajax call to http://fedtest.aws.af.cm to populate radio buttons. main.css - added min height to education_level div to prevent jumping when the ajax call is made to populate radio buttons.

--- a/styles/main.css
+++ b/styles/main.css
@@ -45,7 +45,7 @@ h2 {
 label {
   display: block;
   margin-bottom: .8em;
-  color #222;
+  color: #222;
 }
 
 input {
@@ -74,4 +74,20 @@ input {
   width: 520px;
   padding-left: 20px;
 }
+
+/*jkay additions*/
+.education_level{
+	min-height:200px;	
+}
+
+
+
+
+
+
+
+
+
+
+
 
